crates/perfgate-cli/tests/snapshots/cli_help_snapshot_tests__help_decision.snap
---
source: crates/perfgate-cli/tests/cli_help_snapshot_tests.rs
expression: "help_output(&[\"decision\", \"--help\"])"
---
Evaluate scenario and tradeoff evidence into a review-ready decision summary

Usage: perfgate decision [OPTIONS] <COMMAND>

Commands:
  evaluate Evaluate configured scenarios and tradeoffs, then render decision markdown
  upload Upload a perfgate.tradeoff.v1 receipt to the baseline server decision ledger
  history List stored decision receipts from the baseline server
  latest Show the latest stored decision receipt from the baseline server
  help Print this message or the help of the given subcommand(s)

Options:
  -h, --help Print help

Global Options:
      --baseline-server <BASELINE_SERVER> URL of the baseline server (e.g., http://localhost:3000/api/v1) Can also be set via PERFGATE_SERVER_URL environment variable
      --api-key <API_KEY> API key for authentication with the baseline server. Can also be set via PERFGATE_API_KEY environment variable
      --project <PROJECT> Project name for multi-tenancy. Can also be set via PERFGATE_PROJECT environment variable
