crates/perfgate-cli/tests/snapshots/cli_help_snapshot_tests__help_policy_doctor.snap
---
source: crates/perfgate-cli/tests/cli_help_snapshot_tests.rs
assertion_line: 719
expression: "help_output(&[\"policy\", \"doctor\", \"--help\"])"
---
Report advisory policy promotion readiness without changing config

Usage: perfgate policy doctor [OPTIONS]

Options:
      --config <CONFIG> Path to the config file (TOML or JSON) [default: perfgate.toml]
      --out-dir <DIR> Output directory containing recent artifacts. Defaults to [defaults].out_dir or artifacts/perfgate
      --bench <BENCH> Limit promotion readiness output to one configured benchmark
  -h, --help Print help

Global Options:
      --baseline-server <BASELINE_SERVER> URL of the baseline server (e.g., http://localhost:3000/api/v1) Can also be set via PERFGATE_SERVER_URL environment variable
      --api-key <API_KEY> API key for authentication with the baseline server. Can also be set via PERFGATE_API_KEY environment variable
      --project <PROJECT> Project name for multi-tenancy. Can also be set via PERFGATE_PROJECT environment variable
